# Doctor-ai-agent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  docker-compose.yml  skills-lock.json
.claude/specs/: API_SPEC.md  AUTH_API_GATEWAY.md  DATABASE_SCHEMA.md  INDEX.md  SYSTEM_ARCHITECTURE.md
apps/api-gateway/: .gitignore  Dockerfile  pyproject.toml
apps/api-gateway/alembic/: 001_initial_schema.sql  002_fix_migration.sql
apps/api-gateway/app/: config.py  main.py
apps/api-gateway/app/api/v1/: deps.py  routes.py
apps/api-gateway/app/db/: models.py
apps/api-gateway/app/middleware/: auth.py  auth_middleware.py  error_handler.py  rate_limiter.py  rbac.py  router.py  streaming.py
apps/api-gateway/app/models/: domain.py  schemas.py
apps/api-gateway/app/repositories/: tenant_repo.py
apps/api-gateway/app/services/: auth_service.py
apps/api-gateway/tests/: test_auth.py  test_health.py  test_rate_limiter.py  test_rbac.py
apps/doctor-service/: Dockerfile  pyproject.toml
apps/doctor-service/app/: config.py  main.py
apps/doctor-service/app/db/: models.py  session.py
apps/doctor-service/app/middleware/: auth.py
apps/doctor-service/app/models/: domain.py
apps/patient-service/: Dockerfile  pyproject.toml
apps/patient-service/app/: config.py  main.py
apps/patient-service/app/api/v1/: deps.py  routes.py
apps/patient-service/app/db/: models.py
apps/patient-service/app/middleware/: auth.py
apps/patient-service/app/models/: domain.py  schemas.py
apps/patient-service/app/repositories/: patient_repo.py
apps/patient-service/app/services/: patient_service.py
apps/patient-service/app/utils/: cursor.py
apps/patient-service/tests/: conftest.py  test_medical_records.py  test_patients.py
